fix pdxreporter popups on mobile devices

--- a/map.css
+++ b/map.css
@@ -33,6 +33,10 @@ a:hover, a:active {
     height: 100%;
 }
 
+.maplibregl-popup {
+    z-index: 10;
+}
+
 .maplibregl-popup-content {
     backdrop-filter: blur(2px);
     background-color: rgb(255 255 255 / 50%);
